import { MigrationInterface, QueryRunner } from "typeorm";

export class RD22Normalization1770218547105 implements MigrationInterface {
    name = 'RD22Normalization1770218547105'

    public async up(queryRunner: QueryRunner): Promise<void> {
        await queryRunner.query(`DROP INDEX "public"."IDX_f685d950a3f4144ec3e30f581e"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_1192f7376d5866e38700f4a4f1"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_bc31e662c2b5218387bde63d10"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_ca21ccbaaeadf462078a3aec19"`);
        await queryRunner.query(`CREATE TYPE "public"."strategy_scale_enum" AS ENUM('immediate', 'short_term', 'medium_term', 'long_term')`);
        await queryRunner.query(`CREATE TABLE "strategy" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "action" text NOT NULL, "scale" "public"."strategy_scale_enum" NOT NULL, "deadline" date, "responsibility" character varying, "sort_order" integer NOT NULL, "created_at" TIMESTAMP NOT NULL DEFAULT now(), "updated_at" TIMESTAMP NOT NULL DEFAULT now(), "answer_id" uuid NOT NULL, "created_by" uuid NOT NULL, CONSTRAINT "PK_733d2c3d4a73c020375b9b3581d" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_e5fa0c7d9d03be66f8c48b6e62" ON "strategy" ("answer_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_8fc0c8a5ba01c652d834f91228" ON "strategy" ("created_by") `);
        await queryRunner.query(`CREATE TYPE "public"."answer_value_enum" AS ENUM('yes', 'partly', 'no')`);
        await queryRunner.query(`CREATE TABLE "answer" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "value" "public"."answer_value_enum", "notes" text, "created_at" TIMESTAMP NOT NULL DEFAULT now(), "updated_at" TIMESTAMP NOT NULL DEFAULT now(), "assessment_id" uuid NOT NULL, "question_id" uuid NOT NULL, CONSTRAINT "UQ_626f3fbf79785b13f86f6a331e7" UNIQUE ("assessment_id", "question_id"), CONSTRAINT "PK_9232db17b63fb1e94f97e5c224f" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_065fc14c702822bdcbfd0d166f" ON "answer" ("assessment_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_c3d19a89541e4f0813f2fe0919" ON "answer" ("question_id") `);
        await queryRunner.query(`CREATE TABLE "guidance" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "title" character varying NOT NULL, "content" text NOT NULL, "sort_order" integer NOT NULL, "created_at" TIMESTAMP NOT NULL DEFAULT now(), "question_id" uuid NOT NULL, CONSTRAINT "PK_ec3d596ea4116e47ff0cea38e1d" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_6a99f2bb0f7198af6c5062e006" ON "guidance" ("question_id") `);
        await queryRunner.query(`CREATE TABLE "custom_topic" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "topic_text" text NOT NULL, "sort_order" integer NOT NULL, "created_at" TIMESTAMP NOT NULL DEFAULT now(), "updated_at" TIMESTAMP NOT NULL DEFAULT now(), "assessment_id" uuid NOT NULL, "question_id" uuid NOT NULL, "created_by" uuid NOT NULL, CONSTRAINT "PK_b395bfe9f8fd78a1b52707f6db4" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_0f5668f938e21db487098a5c55" ON "custom_topic" ("assessment_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_44113910ee75077880d3001d2c" ON "custom_topic" ("question_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_9e1e64aae1039a718ab7bbc372" ON "custom_topic" ("created_by") `);
        await queryRunner.query(`CREATE TYPE "public"."question_theme_enum" AS ENUM('Motivate', 'Enable', 'Implement')`);
        await queryRunner.query(`CREATE TABLE "question" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "question_code" character varying NOT NULL, "theme" "public"."question_theme_enum" NOT NULL, "feature" character varying NOT NULL, "key_success_factor" character varying NOT NULL, "definition" text, "question_text" text NOT NULL, "comments" text, "follow_up_questions" text, "strategy_examples" text, "sort_order" integer NOT NULL, "created_at" TIMESTAMP NOT NULL DEFAULT now(), "diagnostic_id" uuid NOT NULL, CONSTRAINT "UQ_6eeca04c32f08cffb807ef757f9" UNIQUE ("diagnostic_id", "question_code"), CONSTRAINT "PK_21e5786aa0ea704ae185a79b2d5" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_febac83bee419e09ef17f34970" ON "question" ("diagnostic_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_aa6af4ce5fd8c5957910e1faf4" ON "question" ("theme") `);
        await queryRunner.query(`CREATE TABLE "contributor" ("id" uuid NOT NULL DEFAULT uuid_generate_v4(), "contributor_name" character varying NOT NULL, "role" character varying, "added_at" TIMESTAMP NOT NULL DEFAULT now(), "assessment_id" uuid NOT NULL, "lead_id" uuid NOT NULL, CONSTRAINT "UQ_6aa2322f136ab2819b02d51e9bd" UNIQUE ("assessment_id", "lead_id"), CONSTRAINT "PK_816afef005b8100becacdeb6e58" PRIMARY KEY ("id"))`);
        await queryRunner.query(`CREATE INDEX "IDX_41b3b780fedd5010883329c31a" ON "contributor" ("assessment_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_4a8b5b75fba7d8320f7a00da16" ON "contributor" ("lead_id") `);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "questions"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "creation_date"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "creation_date"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "last_update"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "submission_date"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "title" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "description" text`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "created_at" TIMESTAMP NOT NULL DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "created_at" TIMESTAMP NOT NULL DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "updated_at" TIMESTAMP NOT NULL DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "submitted_at" TIMESTAMP`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "language"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "language" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "diagnostic_year"`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "diagnostic_year" character varying NOT NULL`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "status"`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "status" character varying NOT NULL DEFAULT 'draft'`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD CONSTRAINT "UQ_f685d950a3f4144ec3e30f581e6" UNIQUE ("version", "language")`);
        await queryRunner.query(`ALTER TABLE "strategy" ADD CONSTRAINT "FK_e5fa0c7d9d03be66f8c48b6e62c" FOREIGN KEY ("answer_id") REFERENCES "answer"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "strategy" ADD CONSTRAINT "FK_8fc0c8a5ba01c652d834f912281" FOREIGN KEY ("created_by") REFERENCES "lead"("id") ON DELETE RESTRICT ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "answer" ADD CONSTRAINT "FK_065fc14c702822bdcbfd0d166f8" FOREIGN KEY ("assessment_id") REFERENCES "assessments"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "answer" ADD CONSTRAINT "FK_c3d19a89541e4f0813f2fe09194" FOREIGN KEY ("question_id") REFERENCES "question"("id") ON DELETE RESTRICT ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "guidance" ADD CONSTRAINT "FK_6a99f2bb0f7198af6c5062e006b" FOREIGN KEY ("question_id") REFERENCES "question"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "custom_topic" ADD CONSTRAINT "FK_0f5668f938e21db487098a5c550" FOREIGN KEY ("assessment_id") REFERENCES "assessments"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "custom_topic" ADD CONSTRAINT "FK_44113910ee75077880d3001d2ca" FOREIGN KEY ("question_id") REFERENCES "question"("id") ON DELETE RESTRICT ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "custom_topic" ADD CONSTRAINT "FK_9e1e64aae1039a718ab7bbc3726" FOREIGN KEY ("created_by") REFERENCES "lead"("id") ON DELETE RESTRICT ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "question" ADD CONSTRAINT "FK_febac83bee419e09ef17f349700" FOREIGN KEY ("diagnostic_id") REFERENCES "diagnostic"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "contributor" ADD CONSTRAINT "FK_41b3b780fedd5010883329c31a1" FOREIGN KEY ("assessment_id") REFERENCES "assessments"("id") ON DELETE CASCADE ON UPDATE NO ACTION`);
        await queryRunner.query(`ALTER TABLE "contributor" ADD CONSTRAINT "FK_4a8b5b75fba7d8320f7a00da16e" FOREIGN KEY ("lead_id") REFERENCES "lead"("id") ON DELETE RESTRICT ON UPDATE NO ACTION`);
    }

    public async down(queryRunner: QueryRunner): Promise<void> {
        await queryRunner.query(`ALTER TABLE "contributor" DROP CONSTRAINT "FK_4a8b5b75fba7d8320f7a00da16e"`);
        await queryRunner.query(`ALTER TABLE "contributor" DROP CONSTRAINT "FK_41b3b780fedd5010883329c31a1"`);
        await queryRunner.query(`ALTER TABLE "question" DROP CONSTRAINT "FK_febac83bee419e09ef17f349700"`);
        await queryRunner.query(`ALTER TABLE "custom_topic" DROP CONSTRAINT "FK_9e1e64aae1039a718ab7bbc3726"`);
        await queryRunner.query(`ALTER TABLE "custom_topic" DROP CONSTRAINT "FK_44113910ee75077880d3001d2ca"`);
        await queryRunner.query(`ALTER TABLE "custom_topic" DROP CONSTRAINT "FK_0f5668f938e21db487098a5c550"`);
        await queryRunner.query(`ALTER TABLE "guidance" DROP CONSTRAINT "FK_6a99f2bb0f7198af6c5062e006b"`);
        await queryRunner.query(`ALTER TABLE "answer" DROP CONSTRAINT "FK_c3d19a89541e4f0813f2fe09194"`);
        await queryRunner.query(`ALTER TABLE "answer" DROP CONSTRAINT "FK_065fc14c702822bdcbfd0d166f8"`);
        await queryRunner.query(`ALTER TABLE "strategy" DROP CONSTRAINT "FK_8fc0c8a5ba01c652d834f912281"`);
        await queryRunner.query(`ALTER TABLE "strategy" DROP CONSTRAINT "FK_e5fa0c7d9d03be66f8c48b6e62c"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP CONSTRAINT "UQ_f685d950a3f4144ec3e30f581e6"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "status"`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "status" character varying(50) NOT NULL DEFAULT 'draft'`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "diagnostic_year"`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "diagnostic_year" character varying(4) NOT NULL`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "language"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "language" character varying(2) NOT NULL`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "submitted_at"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "updated_at"`);
        await queryRunner.query(`ALTER TABLE "assessments" DROP COLUMN "created_at"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "created_at"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "description"`);
        await queryRunner.query(`ALTER TABLE "diagnostic" DROP COLUMN "title"`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "submission_date" TIMESTAMP`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "last_update" TIMESTAMP DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "assessments" ADD "creation_date" TIMESTAMP NOT NULL DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "creation_date" TIMESTAMP NOT NULL DEFAULT now()`);
        await queryRunner.query(`ALTER TABLE "diagnostic" ADD "questions" text NOT NULL`);
        await queryRunner.query(`DROP INDEX "public"."IDX_4a8b5b75fba7d8320f7a00da16"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_41b3b780fedd5010883329c31a"`);
        await queryRunner.query(`DROP TABLE "contributor"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_aa6af4ce5fd8c5957910e1faf4"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_febac83bee419e09ef17f34970"`);
        await queryRunner.query(`DROP TABLE "question"`);
        await queryRunner.query(`DROP TYPE "public"."question_theme_enum"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_9e1e64aae1039a718ab7bbc372"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_44113910ee75077880d3001d2c"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_0f5668f938e21db487098a5c55"`);
        await queryRunner.query(`DROP TABLE "custom_topic"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_6a99f2bb0f7198af6c5062e006"`);
        await queryRunner.query(`DROP TABLE "guidance"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_c3d19a89541e4f0813f2fe0919"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_065fc14c702822bdcbfd0d166f"`);
        await queryRunner.query(`DROP TABLE "answer"`);
        await queryRunner.query(`DROP TYPE "public"."answer_value_enum"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_8fc0c8a5ba01c652d834f91228"`);
        await queryRunner.query(`DROP INDEX "public"."IDX_e5fa0c7d9d03be66f8c48b6e62"`);
        await queryRunner.query(`DROP TABLE "strategy"`);
        await queryRunner.query(`DROP TYPE "public"."strategy_scale_enum"`);
        await queryRunner.query(`CREATE INDEX "IDX_ca21ccbaaeadf462078a3aec19" ON "assessments" ("region_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_bc31e662c2b5218387bde63d10" ON "assessments" ("lead_id") `);
        await queryRunner.query(`CREATE INDEX "IDX_1192f7376d5866e38700f4a4f1" ON "assessments" ("diagnostic_id") `);
        await queryRunner.query(`CREATE UNIQUE INDEX "IDX_f685d950a3f4144ec3e30f581e" ON "diagnostic" ("language", "version") `);
    }

}
